Fix the deadlock while running compiler.
..also increases the benchmark execution count to reduce the noise.

Change-Id: I188ee7d3c4c2505fa100a6a65b6cf5ef41437a34